tests/baselines/reference/labeledStatementWithLabel.errors.txt
labeledStatementWithLabel.ts(1,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(2,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(3,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(4,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(5,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(6,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(7,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(8,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(9,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(11,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(11,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
labeledStatementWithLabel.ts(12,1): error TS1344: 'A label is not allowed here.
labeledStatementWithLabel.ts(12,8): error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
labeledStatementWithLabel.ts(13,1): error TS1344: 'A label is not allowed here.


==== labeledStatementWithLabel.ts (14 errors) ====
    label: function fn() { }
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: function* gen() { }
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: async function gen1() { }
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: enum E {}
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: interface I {}
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: class C { }
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: var a = 1;
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: let b = 1;
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    label: const c = 1;
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    
    label: namespace M { }
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: namespace N {}
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
           ~~~~~~~~~
!!! error TS1235: A namespace declaration is only allowed at the top level of a namespace or module.
    label: type T = {}
    ~~~~~
!!! error TS1344: 'A label is not allowed here.
    